--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "svg-react-loader": "^0.4.6",
     "url-loader": "^2.1.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "express": "^4.17.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
