--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "react-dom": "^16.10.1",
+    "react-router-dom": "^5.1.2"
   }
 }
