--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "scripts": {
     "build:server": "cross-env NODE_ENV=production  webpack --config webpack-server.config.js",
-    "dev:server": "webpack --config webpack-server.config.js",
+    "dev:server": "cross-env NODE_ENV=development webpack --config webpack-server.config.js",
     "start:server": "node ./build/server/index.js",
-    "build:client": "webpack --config webpack-client.config.js",
+    "build:client": "cross-env NODE_ENV=production webpack --config webpack-client.config.js",
+    "dev:client": "cross-env NODE_ENV=development webpack --config webpack-client.config.js",
     "build": "yarn clean && yarn build:client && yarn build:server && yarn start:server",
     "clean": "rimraf build"
   },
@@ -30,12 +31,15 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
