--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "license": "MIT",
   "scripts": {
     "build:server": "cross-env NODE_ENV=production  webpack --config webpack-server.config.js",
-    "dev:server": "cross-env NODE_ENV=development webpack --config webpack-server.config.js",
+    "dev:server": "cross-env NODE_ENV=development webpack --config webpack-server.config.js --watch",
     "start:server": "node ./build/server/index.js",
+    "start-dev:server": "nodemon ./build/server/index.js",
     "build:client": "cross-env NODE_ENV=production webpack --config webpack-client.config.js",
-    "dev:client": "cross-env NODE_ENV=development webpack --config webpack-client.config.js",
+    "dev:client": "cross-env NODE_ENV=development webpack --config webpack-client.config.js --watch",
     "build": "yarn clean && yarn build:client && yarn build:server && yarn start:server",
     "clean": "rimraf build"
   },
@@ -23,6 +24,7 @@
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "node-sass": "^4.12.0",
+    "nodemon": "^1.19.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "svg-react-loader": "^0.4.6",
