--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "hermione": "^2.13.0",
+    "mocha": "^6.2.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.3",
     "sass-loader": "^8.0.0",
