--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.12",
+    "@types/react-redux": "^7.1.4",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "copy-webpack-plugin": "^5.0.4",
@@ -39,6 +40,7 @@
     "style-loader": "^1.0.0",
     "svg-react-loader": "^0.4.6",
     "ts-loader": "^6.2.0",
+    "typesafe-actions": "^4.4.2",
     "typescript": "^3.6.4",
     "url-loader": "^2.1.0",
     "webpack": "^4.41.1",
