--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.12",
     "@types/react-redux": "^7.1.4",
+    "@types/redux-logger": "^3.0.7",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "copy-webpack-plugin": "^5.0.4",
