--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.0.0",
+    "@types/classnames": "^2.2.9",
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.12",
     "@types/react-redux": "^7.1.4",
