--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/classnames": "^2.2.9",
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.12",
+    "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
+    "@types/react-router-dom": "^5.1.0",
     "@types/redux-logger": "^3.0.7",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
