--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,8 @@
         "sourceMap": true,
         "lib": [
             "es2015",
+            "dom"
         ]
-        // "paths": {
-        //     "static/*": ["./src/static/*"]
-        // },
     },
     "exclude": [
         "node_modules"
